observability: Add a memory tracking allocator
Implements an std::allocator that tracks allocated and deallocated
memory bytes. Each allocator instance is tagged with a mem_tracker
instance.

mem_trackers can form a hierarchy, used to compute the memory breakdown.

ex: We can have a root tracker for the redpanda process and child
trackers for each of the subsystems.

tree rooted at a tracker and to pretty print the tree in ascii.

--- a/src/v/utils/CMakeLists.txt
+++ b/src/v/utils/CMakeLists.txt
@@ -8,6 +8,7 @@ v_cc_library(
     file_io.cc
     base64.cc
     retry_chain_node.cc
+    tracking_allocator.cc
     vint.cc
     directory_walker.cc
     uuid.cc
@@ -17,5 +18,6 @@ v_cc_library(
     aklomp::base64
     v::rphashing
     v::rprandom
-    v::bytes)
+    v::bytes
+    v::json)
 add_subdirectory(tests)
